TWLight/static/css/local.css
/* ... */
.navbar-left {
	height:78px;
	padding-top:5px; 
}

@media (max-width: 767px) {
  nav .divider {
    border-left: none;
  }

  li.mobile-menu {
	font-size:.9em;	
}
}

/* Portrait phones and smaller */
@media (max-width: 480px) {
.site-title {
	font-family: Palatino; 
	font-size:.9em; 
	font-weight:bold; 
	margin: -10px 0px 10px 0px; 
	color:#000000;
}

.logo {
	height:50px; 
	float:left; 
	padding:0px 10px 0px 0px;
}

.login .btn {
	padding:10px 12px;
	font-size: 1em;
	margin:10px;
}
}

/*
----------------------------------------------------------------------------
TIMELINE
--------------------------------------------------------------------------*/
.half-timeline > li > .timeline-badge {
  left: 0;
}

.half-timeline:before {
  left: 0;
}

.half-timeline > li.timeline-inverted > .timeline-panel {
  float: left;
  margin-left: 50px;
  width: 70%;
}

.full-width {
  display: block;
  width: 100%;
}

/* removes li after 5th from homepage */
ul.timeline li:nth-child(-n+5) {
   display: list-item;
}

ul.timeline-home li {
	display:none;
}

/*
----------------------------------------------------------------------------
MISC
--------------------------------------------------------------------------*/

div.checkbox#div_id_cc {
  display: none;
}

div.panel-body form.form-inline label, div.panel-body form.form-inline select {
  padding: .2em .7em;
}

div.panel-body form.form-inline input#submit-id-submit.btn.btn-default {
  margin-left: .7em;
}

#resource-filter-panel-body {
  border: none;
  box-shadow: none;
  margin-top: .7em;
}

.browse-suggest {
  padding-top: 25px;
  padding-bottom: 25px;
  justify-content: flex-end;
}

/* Quick hack for tos misalignment on applications. */
.apply-tos {
  margin-right: 100%;
}

.panel-footer {
  background-color: white;
}

#id_honeypot {
    display: none;
}


/* Bootstrap default labels are really hard to read. This makes them bigger
   and opens up them up a bit, while still preventing them from overlapping
   if there are multiple rows of labels.
*/

/*
.label {
  font-size: inherit;
  letter-spacing: 0.35px;
  padding: .2em .4em .3em;
  font-weight: inherit;
}
*/

.label {
  font-size: 85%;
  padding: .15em .6em;
  letter-spacing: 0.25px;
  font-weight: 500;
  margin-top: 5px; 
}

.resource-label {
  #margin: 0px -10px 0px 0px;
  #color:#337ab7;
  #padding: .2em .6em .3em;
  padding: .2em 0 .2em .7em;
}

.resource-label-subject {
  background-image: url("../img/bullet-subject.png");
  background-repeat: no-repeat;
  background-position: top left; /* Must set explicitly for CSS Janus. */
  min-height: 2em;
  padding: 6px 0px 0px 25px;
}

.resource-label-languages {
  background-image: url("../img/bullet-language.png");
  background-repeat: no-repeat;
  background-position: top left; /* Must set explicitly for CSS Janus. */
  min-height: 2em;
  padding: 6px 0px 0px 25px;
}

.resource-label-warning {
  background-image: url("../img/bullet-warning.png");
  background-repeat: no-repeat;
  background-position: top left; /* Must set explicitly for CSS Janus. */
  min-height: 2em;
  padding: 6px 0px 0px 25px;
}

.resource-label-danger {
  background-image: url("../img/bullet-danger.png");
  background-repeat: no-repeat;
  background-position: top left; /* Must set explicitly for CSS Janus. */
  min-height: 2em;
  padding: 6px 0px 0px 25px;
}

.resource-label-subject a:focus, .resource-label-subject a:hover, .resource-label-languages a:focus, .resource-label-languages a:hover {
  color: #23527c;
  text-decoration: underline;
}

.resource-label-warning .resource-label {
  color: #8a6d3b;
}

.resource-label-danger .resource-label {
  color: #ba5d5d;
}

.pipe {
  margin: 0px -5px 0px 4px;
}

/* Without intervention, some tags will break out of their timeline containers.
   These can get introduced via rendered wikicode, which has lots of &nbsp;
*/

.timeline-body * code, .panel-body .panel-partner-description, .panel-body * code {
  overflow-wrap: break-word;
  word-wrap: break-word;
  font-family: sans-serif;
  font-size: 100%;
  color: black;
  background-color: white;
}

/* Partner language list should stand out a bit.
*/

.partner-languages {
  font-style: italic;
}

/*
wiki library team found big text annoying in partner details page.
https://phabricator.wikimedia.org/T150006
*/

h4.timeline-title {
  font-size: inherit;
}

/*
A few spots just need padding instead of margin.
*/

.margin-bottom-2em {
  margin-bottom: 2em;
}

.margin-top-5 {
  margin-top: 5px;
}

.row-flex {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.col-flex {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

/*
  Override some of the panel border styling so our flex
  elements look correct.
*/

.panel {
  border: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.panel-body {
  border: solid #ddd;
  border-width: 0 1px 1px 1px;
  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
  box-shadow: 0 1px 1px rgba(0,0,0,.05);
}

.top-border.panel-body {
  border: 1px solid #ddd;
  border-radius: 5px;
  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
  box-shadow: 0 1px 1px rgba(0,0,0,.05);
}

.transparent-panel {
  border-color: transparent;
}

.panel-heading {
  border: solid #ddd;
  border-width: 1px 1px 0 1px;
  background-color:red;
  font-weight: 700;
  }

.partner-logo {
  position: relative;
  padding: 0 10% 0 10%;
  margin: 0 auto 2em auto;
  max-height: 7em;
  min-height: 3em;
  z-index: 1;
}

.partner-logo-container {
  height: 6em;
}

.resource-label-container {
  height: 100%;
}


.panel-partner-info {

}

.lead {
  text-align:center;
  padding: 15px;
  border:1px solid #c9c9c9;
  border-radius:4px;
  box-shadow:1px 1px 2px #eaeaea;
  font-size:1.4em;
}

.border {
  padding: 10px;
  border:1px solid #c9c9c9;
  border-radius:4px;
  box-shadow:1px 1px 2px #eaeaea;
  margin:20px 20px 0px 0px;
  min-height:350px;
}
/* ... */

